Disables tooltip tests for aura-mus-client

These tests use AuraTestHelper::GetContext(), which doesn't make sense for
aura-mus-client. The reason GetContext() doesn't make sense is that
GetContext() is created by AuraTestHelper from a WindowTreeHost and is
generally used to corresponds to the root of an ash environment where
you use NativeWidgetAura. This only makes sense for the
aura-mus-windowmanager config.

So, I'm making these early out for now and we'll have to reevaluate
them later.

BUG=663781
TEST=test only change
R=msw@chromium.org

Review-Url: https://codereview.chromium.org/2489903002
Cr-Commit-Position: refs/heads/master@{#430982}

Former-commit-id: ce4cfbd771f398405d2985095f9d4774aa0a04f6